--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
-.App {
+body {
   text-align: center;
+  background-color: #282c34;
 }
 
 .App-logo {
@@ -13,15 +14,17 @@
   }
 }
 
-.App-header {
+.App-container {
   background-color: #282c34;
-  min-height: 100vh;
+  margin: 40px 0;
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  position: fixed;
+  right: 40px;
+  bottom: 40px;
+  z-index: 9999;
+  box-shadow: 5px 5px 13px rgba(91, 81, 81, 0.4);
+  border-radius: 5px;
 }
 
 .App-link {
@@ -35,4 +38,24 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.app-chatbot-button {
+  width: 50px;
+  height: 50px;
+  border-radius: 25px;
+  background-color: #1f3646;
+  border: none;
+  position: fixed;
+  bottom: 15px;
+  z-index: 9999;
+  right: 40px;
+  user-select: none;
+}
+
+.app-chatbot-button-icon {
+  width: 25px;
+  height: 25px;
+  filter: invert(1);
+  user-select: none;
 }
